<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onBack"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSettings"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:src="@drawable/settings" />

        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_999999" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <RadioGroup
            android:id="@+id/rgCondition"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/radio_btn"
                android:drawablePadding="20dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="50dp"
                android:text="All"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbOnline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableLeft="@drawable/radio_btn"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="50dp"
                android:text="Online"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_device_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rgCondition"
            android:overScrollMode="never" />

        <RelativeLayout
            android:id="@+id/rl_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rgCondition"
            android:background="@color/grey_f2f2f2"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/main_welcome"
                android:textColor="@color/grey_808080"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/empty_device" />
        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_corner_btn_bg"
        android:clickable="true"
        android:gravity="center"
        android:onClick="mainAddDevices"
        android:text="@string/main_add_device"
        android:textColor="@color/white_ffffff"
        android:textSize="15sp" />
</LinearLayout>
